--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,6 +18,7 @@ apps:
     environment:
       JAVA_HOME: $SNAP/usr/lib/jvm/java-11-openjdk-amd64
       SPARK_HOME: $SNAP/opt/spark
+    plugs: [home, network, network-bind]
 
 parts:
   inferschema:
@@ -25,21 +26,18 @@ parts:
     - spark
     plugin: python
     source: .
-    build-packages:
-      - python3-pip
-      - python3-poetry
       
   spark:
     plugin: nil
     build-packages:
-      - openjdk-11-jdk-headless
-      - openjdk-11-jre-headless
       - wget
+    stage-packages:
+      - openjdk-11-jre-headless
     override-build: |
-      wget https://dlcdn.apache.org/spark/spark-3.3.4/spark-3.3.4-bin-hadoop3.tgz
+      wget https://dlcdn.apache.org/spark/spark-3.5.0/spark-3.5.0-bin-hadoop3.tgz
       SPARK_DIR=$CRAFT_PART_INSTALL/opt/spark
       mkdir -p $SPARK_DIR
-      tar -zxvf spark-3.3.4-bin-hadoop3.tgz
-      mv spark-3.3.4-bin-hadoop3/* $SPARK_DIR/
+      tar -zxvf spark-3.5.0-bin-hadoop3.tgz
+      mv spark-3.5.0-bin-hadoop3/* $SPARK_DIR/
     override-prime:
       snapcraftctl prime
