--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,7 +1,7 @@
-name: inferschema # you probably want to 'snapcraft register <name>'
-base: core22 # the base snap is the execution environment for this snap
-version: '0.1.0' # just for humans, typically '1.2+git' or '1.3.2'
-summary: infer schema of provided file via Spark's df # 79 char long summary
+name: inferschema
+base: core22 
+version: '0.1.0' 
+summary: infer schema of provided file via Spark's df
 description: |
   infer schema of provided file via Spark's df.
 
@@ -27,7 +27,6 @@ parts:
       - ca-certificates
       - ca-certificates-java
       - openjdk-11-jre-headless
-      - wget
     stage-packages:
       - openjdk-11-jre-headless
     override-prime: |
