fix: `arch` in snapcraft.yaml

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,7 +10,8 @@ grade: stable
 confinement: strict
 
 architectures:
-  - build-on: [amd64, arm64]
+  - build-on: [amd64]
+  - build-on: [arm64]
 
 apps:
   inferschema:
