--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,7 +17,7 @@ apps:
   inferschema:
     command: bin/inferschema
     environment:
-      JAVA_HOME: $SNAP/usr/lib/jvm/java-11-openjdk-amd64
+      PATH: $SNAP:$PATH
     plugs: [network, network-bind]
 
 parts:
